--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -4,9 +4,11 @@
 
 @section Styles {
 	<link href="~/css/cart.css" rel="stylesheet">
+	<link rel="stylesheet" href="~/admin/js/plugins/sweetalert2/sweetalert2.css">
 }
 
 @section Scripts {
+	<script src="~/admin/js/plugins/sweetalert2/sweetalert2.min.js"></script>
 	<script src="~/js/cart.js"></script>
 }
 
@@ -51,7 +53,7 @@
 			</tbody>
 		</table>
 
-		<div class="row add_top_30 flex-sm-row-reverse cart_actions">
+		@* <div class="row add_top_30 flex-sm-row-reverse cart_actions">
 			<div class="col-sm-4 text-end">
 				<button type="button" class="btn_1 gray">Update Cart</button>
 			</div>
@@ -65,7 +67,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> *@
 		<!-- /cart_actions -->
 
 	</div>
