--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -2060,7 +2060,7 @@ main.freeze {
 
 header .main_header {
   position: relative;
-  z-index: 99999;
+  /*z-index: 99999;*/
 }
 @media (max-width: 991px) {
   header .main_header {
