--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -65,7 +65,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" id="btn-save-blog" class="btn btn-primary" />
+                <input type="submit" value="Create" id="btn-add-blog" class="btn btn-primary" />
             </div>
         </form>
     </div>
