--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -206,7 +206,7 @@
 			<div class="container">
 				<div class="search-input">
 					<input type="text" placeholder="Search over 10.000 products...">
-					<button type="submit"><i class="ti-search"></i></button>
+					<button><i class="ti-search"></i></button>
 				</div>
 			</div>
 			<!-- /related -->
@@ -340,14 +340,14 @@
 	</div>
 	<div class="top_panel top_panel_search">
 		<div class="container header_panel">
-			<a href="#0" class="btn_close_top_panel btn_close_top_panel_search"><i class="ti-close"></i></a>
+			<a class="btn_close_top_panel btn_close_top_panel_search"><i class="ti-close"></i></a>
 			<small>What are you looking for?</small>
 		</div>
 		<!-- /header_panel -->
 
 		<div class="container">
 			<div class="search-input">
-				<input type="text" placeholder="Search over 10.000 products...">
+				<input id="search-input" type="text" placeholder="Search over 10.000 products...">
 				<button type="submit"><i class="ti-search"></i></button>
 			</div>
 		</div>
