--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -40,7 +40,7 @@
 					<th>
 						Quantity
 					</th>
-					<th>
+					<th class="text-center">
 						Subtotal
 					</th>
 					<th>
@@ -78,17 +78,17 @@
 			<div class="row justify-content-end">
 				<div class="col-xl-4 col-lg-4 col-md-6">
 					<ul>
-						<li>
+@* 						<li>
 							<span>Subtotal</span> $240.00
 						</li>
 						<li>
 							<span>Shipping</span> $7.00
-						</li>
+						</li> *@
 						<li>
-							<span>Total</span> $247.00
+							<span>Total</span><span id="total-cart-price-tbl">$247.00</span>
 						</li>
 					</ul>
-					<a href="cart-2.html" class="btn_1 full-width cart">Proceed to Checkout</a>
+					<a href="~/checkout" class="btn_1 full-width cart">Proceed to Checkout</a>
 				</div>
 			</div>
 		</div>
