Complete UI checkout

--- a/Views/Authentication/Signin.cshtml
+++ b/Views/Authentication/Signin.cshtml
@@ -19,7 +19,7 @@
 			<div class="col-xl-6 col-lg-6 col-md-8">
 				<div class="box_account">
 					<h3 class="client">Already Client</h3>
-					<form class="form_container" asp-action="Signin">
+					<form class="form_container" method="post">
 						<div class="row no-gutters">
 							<div class="col-lg-6 pr-lg-1">
 								<a href="#0" class="social_bt facebook">Login with Facebook</a>
