Add managenent orders UI

--- a/Views/Payment/PaymentSuccess.cshtml
+++ b/Views/Payment/PaymentSuccess.cshtml
@@ -107,7 +107,7 @@
                                         </div>
                                     </td>
                                     <td class="pe-0 fw-medium text-end">
-                                        <span>@item.Price</span>
+                                        <span>$@item.Price</span>
                                     </td>
                                 </tr>
                             }
